# learning-haskell

./: Gemfile  README.md  learning-haskell.cabal
src/Algorithm/Sorting/: Insertionsort.hs  Mergesort.hs  Quicksort.hs  Selectionsort.hs
test/: Spec.hs  SpecHelper.hs
test/Algorithm/Sorting/: InsertionsortSpec.hs  MergesortSpec.hs  QuicksortSpec.hs  SelectionsortSpec.hs
